# InLook

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  build.rs  release-please-config.json
.cargo/: audit.toml  config.toml
.github/workflows/: checks.yml  flatpak-check.yml  fuzz.yml  packagers.yml  release.yml
assets/: Info.plist  inlook.desktop
assets/macos/: entitlements.plist
examples/: gen_msg_fixtures.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: render_eml.rs
packaging/flatpak/: README.md  com.struisict.InLook.metainfo.xml  com.struisict.InLook.yaml  generated-sources.json
packaging/homebrew/: inlook.rb
packaging/macos/: README.md
packaging/signpath/: README.md
packaging/winget/: README.md
packaging/winget/reference/: StruisICT.InLook.installer.yaml  StruisICT.InLook.locale.en-US.yaml  StruisICT.InLook.yaml
scripts/: build-appimage.sh  build-dmg.sh  generate-icons.py  sign-windows.ps1
src/: extract.rs  lib.rs  main.rs  msg.rs  registry.rs  render.rs  update.rs  version.rs
test/: sample.eml
tests/: large_emails.rs  properties.rs  regressions.rs  snapshots.rs
tests/fixtures/: attachments.eml  cid-and-nested.msg  cid-image.eml  hostile-headers.eml  hostile-html-attach.msg  html-body.eml  malformed.eml  nested-message.eml  no-body.eml  plain-text.eml  plain-text.msg
tests/snapshots/: attachments.eml.html  attachments.html  cid-and-nested.msg.html  cid-image.eml.html  hostile-headers.eml.html  hostile-html-attach.msg.html  html-body.eml.html  html-body.html  malformed.eml.html  nested-message.eml.html  no-body.eml.html  no-body.html  plain-text.eml.html  plain-text.html  plain-text.msg.html
wix/: main.wxs
