[package]
name = "inlook"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "InLook — fast EML viewer. Free Software from Struis ICT."
authors = ["Struis ICT"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Struis112/InLook"
keywords = ["eml", "email", "viewer", "windows", "mime"]
categories = ["email", "gui"]

[dependencies]
mail-parser = "0.10"
tao = "0.30"
wry = "0.45"
rfd = "0.14"
html-escape = "0.2"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.6"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
