[package]
name = "inlook"
version = "0.4.0"
edition = "2021"
rust-version = "1.74"
description = "InLook — fast EML viewer. Free Software from Struis ICT."
authors = ["Struis ICT"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Struis112/InLook"
keywords = ["eml", "email", "viewer", "windows", "mime"]
categories = ["email", "gui"]

[dependencies]
mail-parser = "0.10"
tao = "0.35"
wry = "0.45"
rfd = "0.17"
html-escape = "0.2"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.2"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Configuration for `cargo deb` (Debian/Ubuntu package). Built in CI on
# ubuntu-latest. The runtime dependency on libwebkit2gtk-4.1-0 is what wry
# uses to render HTML email bodies on Linux.
[package.metadata.deb]
maintainer = "Struis ICT <info@struisict.com>"
copyright = "2026, Struis ICT"
license-file = ["LICENSE", "0"]
extended-description = """\
InLook is a small, fast viewer for .eml email files.
Free Software from Struis ICT — https://struisict.com"""
section = "mail"
priority = "optional"
assets = [
    ["target/release/inlook", "usr/bin/", "755"],
    ["assets/inlook.desktop", "usr/share/applications/", "644"],
    ["LICENSE", "usr/share/doc/inlook/", "644"],
]
depends = "libwebkit2gtk-4.1-0, libgtk-3-0"
