[package]
name = "inlook"
version = "0.9.0"
edition = "2021"
rust-version = "1.88"
description = "InLook — fast viewer for EML and Outlook MSG email files. Free Software from Struis ICT."
authors = ["Struis ICT"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/StruisICT/InLook"
keywords = ["eml", "msg", "email", "viewer", "outlook"]
categories = ["email", "gui"]

[dependencies]
cfb = "0.14"
mail-parser = "0.11"
tao = "0.30"
wry = "0.45"
rfd = "0.17"
html-escape = "0.2"

[dev-dependencies]
# Property-based tests for the render/parse path — a normal-CI complement to
# the nightly cargo-fuzz target (same invariants, no nightly toolchain needed).
proptest = "1"
# Build synthetic .msg fixtures in tests (same crate the parser uses).
cfb = "0.14"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.2"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Networking_WinHttp",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

# Embeds the app icon + version metadata into inlook.exe at build time (build.rs).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Configuration for `cargo deb` (Debian/Ubuntu package). Built in CI on
# ubuntu-latest. The runtime dependency on libwebkit2gtk-4.1-0 is what wry
# uses to render HTML email bodies on Linux.
[package.metadata.deb]
maintainer = "Struis ICT <info@struisict.com>"
copyright = "2026, Struis ICT"
license-file = ["LICENSE", "0"]
extended-description = """\
InLook is a small, fast viewer for .eml email files.
Free Software from Struis ICT — https://struisict.com"""
section = "mail"
priority = "optional"
assets = [
    ["target/release/inlook", "usr/bin/", "755"],
    ["assets/inlook.desktop", "usr/share/applications/", "644"],
    ["LICENSE", "usr/share/doc/inlook/", "644"],
    ["assets/icons/inlook-16.png",   "usr/share/icons/hicolor/16x16/apps/inlook.png",   "644"],
    ["assets/icons/inlook-32.png",   "usr/share/icons/hicolor/32x32/apps/inlook.png",   "644"],
    ["assets/icons/inlook-48.png",   "usr/share/icons/hicolor/48x48/apps/inlook.png",   "644"],
    ["assets/icons/inlook-64.png",   "usr/share/icons/hicolor/64x64/apps/inlook.png",   "644"],
    ["assets/icons/inlook-128.png",  "usr/share/icons/hicolor/128x128/apps/inlook.png", "644"],
    ["assets/icons/inlook-256.png",  "usr/share/icons/hicolor/256x256/apps/inlook.png", "644"],
    ["assets/icons/inlook-512.png",  "usr/share/icons/hicolor/512x512/apps/inlook.png", "644"],
]
depends = "libwebkit2gtk-4.1-0, libgtk-3-0"
